// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not add sourcemap to emotion-core.tsx if NODE_ENV === 'production' 1`] = `

File: emotion-core.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import { css } from '@emotion/core'
  
  const className = css({
    color: 'red',
    background: 'yellow',
  })
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <div css={className}>
          <span>hello</span>
        </div>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import React from 'react';
  import ReactDOM from 'react-dom';
  import { css } from '@emotion/core';
  const className = /*#__PURE__*/ css({
    color: 'red',
    background: 'yellow',
  }, "label:className;");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<div css={className}>
      <span>hello</span>
    </div>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform emotion-core.tsx with autoLabel false 1`] = `

File: emotion-core.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import { css } from '@emotion/core'
  
  const className = css({
    color: 'red',
    background: 'yellow',
  })
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <div css={className}>
          <span>hello</span>
        </div>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import React from 'react';
  import ReactDOM from 'react-dom';
  import { css } from '@emotion/core';
  const className = /*#__PURE__*/ css({
    color: 'red',
    background: 'yellow',
  }, "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3RzL2ZpeHR1cmVzL2Vtb3Rpb24tY29yZS50c3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBSWtCIiwiZmlsZSI6ImVtb3Rpb24tY29yZS50c3giLCJzb3VyY2VSb290IjoiIiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IFJlYWN0IGZyb20gJ3JlYWN0J1xuaW1wb3J0IFJlYWN0RE9NIGZyb20gJ3JlYWN0LWRvbSdcbmltcG9ydCB7IGNzcyB9IGZyb20gJ0BlbW90aW9uL2NvcmUnXG5cbmNvbnN0IGNsYXNzTmFtZSA9IGNzcyh7XG4gIGNvbG9yOiAncmVkJyxcbiAgYmFja2dyb3VuZDogJ3llbGxvdycsXG59KVxuXG5leHBvcnQgY2xhc3MgU2ltcGxlQ29tcG9uZW50IGV4dGVuZHMgUmVhY3QuUHVyZUNvbXBvbmVudCB7XG4gIHJlbmRlcigpIHtcbiAgICByZXR1cm4gKFxuICAgICAgPGRpdiBjc3M9e2NsYXNzTmFtZX0+XG4gICAgICAgIDxzcGFuPmhlbGxvPC9zcGFuPlxuICAgICAgPC9kaXY+XG4gICAgKVxuICB9XG59XG5cblJlYWN0RE9NLnJlbmRlcig8U2ltcGxlQ29tcG9uZW50IC8+LCBkb2N1bWVudC5xdWVyeVNlbGVjdG9yKCcjYXBwJykpXG4iXX0= */");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<div css={className}>
      <span>hello</span>
    </div>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform emotion-core.tsx with default configs 1`] = `

File: emotion-core.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import { css } from '@emotion/core'
  
  const className = css({
    color: 'red',
    background: 'yellow',
  })
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <div css={className}>
          <span>hello</span>
        </div>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import React from 'react';
  import ReactDOM from 'react-dom';
  import { css } from '@emotion/core';
  const className = /*#__PURE__*/ css({
    color: 'red',
    background: 'yellow',
  }, "label:className;", "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3RzL2ZpeHR1cmVzL2Vtb3Rpb24tY29yZS50c3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBSWtCIiwiZmlsZSI6ImVtb3Rpb24tY29yZS50c3giLCJzb3VyY2VSb290IjoiIiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IFJlYWN0IGZyb20gJ3JlYWN0J1xuaW1wb3J0IFJlYWN0RE9NIGZyb20gJ3JlYWN0LWRvbSdcbmltcG9ydCB7IGNzcyB9IGZyb20gJ0BlbW90aW9uL2NvcmUnXG5cbmNvbnN0IGNsYXNzTmFtZSA9IGNzcyh7XG4gIGNvbG9yOiAncmVkJyxcbiAgYmFja2dyb3VuZDogJ3llbGxvdycsXG59KVxuXG5leHBvcnQgY2xhc3MgU2ltcGxlQ29tcG9uZW50IGV4dGVuZHMgUmVhY3QuUHVyZUNvbXBvbmVudCB7XG4gIHJlbmRlcigpIHtcbiAgICByZXR1cm4gKFxuICAgICAgPGRpdiBjc3M9e2NsYXNzTmFtZX0+XG4gICAgICAgIDxzcGFuPmhlbGxvPC9zcGFuPlxuICAgICAgPC9kaXY+XG4gICAgKVxuICB9XG59XG5cblJlYWN0RE9NLnJlbmRlcig8U2ltcGxlQ29tcG9uZW50IC8+LCBkb2N1bWVudC5xdWVyeVNlbGVjdG9yKCcjYXBwJykpXG4iXX0= */");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<div css={className}>
      <span>hello</span>
    </div>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform emotion-core.tsx with sourcemap false 1`] = `

File: emotion-core.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import { css } from '@emotion/core'
  
  const className = css({
    color: 'red',
    background: 'yellow',
  })
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <div css={className}>
          <span>hello</span>
        </div>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import React from 'react';
  import ReactDOM from 'react-dom';
  import { css } from '@emotion/core';
  const className = /*#__PURE__*/ css({
    color: 'red',
    background: 'yellow',
  }, "label:className;");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<div css={className}>
      <span>hello</span>
    </div>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;
